@@ -1379,3 +1379,5 @@ R   [uuk]: improved world serialization API
 [uuk]: added in-game option to switch world generator
 [uuk]: rewritten how default-loaders for assets are declared using now an "ResourcePipe"
 [uuk]: added internal resource loader for in-memory data storage
+[uuk]: targeting now 20w51a
+[github]: released snapshot 20w51a
